<resources>
    <string name="app_name">AndroidApp</string>
    <string name="title_activity_main">Sokomishalov</string>
    <string name="chepush">Привет, чепуш</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="operation_multiple">x</string>
    <string name="operation_minus">-</string>
    <string name="operation_plus">+</string>
    <string name="operation_dot">.</string>
    <string name="operation_equality">=</string>
    <string name="operation_clear">AC</string>
    <string name="operation_plus_minus">+/-</string>
    <string name="operation_percent">%</string>
    <string name="operation_division">/</string>
</resources>
