<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="ru.sberbank.sokomishalov.app.activities.MainActivity">

        <TextView
                android:gravity="bottom|end"
                android:textAlignment="gravity"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="40sp"
                android:background="@drawable/result_text_view"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:id="@+id/result"
                android:layout_above="@+id/linearLayout1"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:id="@+id/linearLayout1"
                android:layout_above="@+id/linearLayout2"
                >
            <Button
                    android:text="@string/operation_clear"
                    android:background="@drawable/dark_gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonClear"/>
            <Button
                    android:text="@string/operation_plus_minus"
                    android:background="@drawable/dark_gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonSign"/>
            <Button
                    android:text="@string/operation_percent"
                    android:background="@drawable/dark_gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonPercent"/>
            <Button
                    android:text="@string/operation_division"
                    android:background="@drawable/orange_button"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonDivision"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:id="@+id/linearLayout2"
                android:layout_above="@+id/linearLayout3"
                >
            <Button
                    android:text="@string/_7"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonSeven"/>

            <Button
                    android:text="@string/_8"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonEight"/>

            <Button
                    android:text="@string/_9"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonNine"/>
            <Button
                    android:text="@string/operation_multiple"
                    android:background="@drawable/orange_button"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonMultiplication"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:id="@+id/linearLayout3"
                android:layout_above="@+id/linearLayout4"
                >
            <Button
                    android:text="@string/_4"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonFour"/>
            <Button
                    android:text="@string/_5"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonFive"/>
            <Button
                    android:text="@string/_6"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonSix"/>
            <Button
                    android:text="@string/operation_minus"
                    android:background="@drawable/orange_button"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonMinus"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:id="@+id/linearLayout4"
                android:layout_above="@+id/linearLayout5"
                >
            <Button
                    android:text="@string/_1"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:id="@+id/buttonOne"
                    android:onClick="onNumberButtonClick"
                    />
            <Button
                    android:text="@string/_2"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonTwo"/>
            <Button
                    android:text="@string/_3"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonThree"/>
            <Button
                    android:text="@string/operation_plus"
                    android:background="@drawable/orange_button"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonPlus"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:id="@+id/linearLayout5"
                android:layout_alignParentBottom="true"
                >
            <Button
                    android:text="@string/_0"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:onClick="onNumberButtonClick"
                    android:id="@+id/buttonZero"/>
            <Button
                    android:text="@string/operation_dot"
                    android:background="@drawable/gray_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonDot"/>
            <Button
                    android:text="@string/operation_equality"
                    android:background="@drawable/orange_button"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25"
                    android:onClick="onOperationButtonClick"
                    android:id="@+id/buttonEquality"/>
        </LinearLayout>
    </RelativeLayout>

